Third year/First semester/Formal Languages and Compiler Design/Lab6/src/antlr_gen/antlr/IoTinyParser.py
# Generated from antlr/IoTiny.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IoTinyParser ( Parser ):

    grammarFileName = "IoTiny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'on'", "'when'", "'send_command'", "'func'", 
                     "'for'", "'in'", "'if'", "'end'", "'->'", "'='", "':'", 
                     "','", "'('", "')'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'>'", "'<'", "'=='", "'!='", "'>='", 
                     "'<='" ]

    symbolicNames = [ "<INVALID>", "ON", "WHEN", "SEND_COMMAND", "FUNC", 
                      "FOR", "IN", "IF", "END", "ARROW", "ASSIGN", "COLON", 
                      "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "PLUS", 
                      "MINUS", "STAR", "DIV", "MOD", "GT", "LT", "EQ", "NEQ", 
                      "GTE", "LTE", "IDENTIFIER", "INTEGER", "STRING", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_statement_list = 1
    RULE_statement = 2
    RULE_listener_definition = 3
    RULE_trigger_call = 4
    RULE_send_command_stmt = 5
    RULE_assignment_or_call = 6
    RULE_assignment_or_call_tail = 7
    RULE_function_definition = 8
    RULE_parameter_list = 9
    RULE_parameter_list_tail = 10
    RULE_if_statement = 11
    RULE_for_loop = 12
    RULE_block = 13
    RULE_condition = 14
    RULE_relop = 15
    RULE_expression = 16
    RULE_expression_tail = 17
    RULE_term = 18
    RULE_term_tail = 19
    RULE_factor = 20
    RULE_factor_call_tail = 21
    RULE_list_literal = 22
    RULE_list_items = 23
    RULE_list_items_tail = 24
    RULE_argument_list = 25
    RULE_argument_list_tail = 26
    RULE_add_op = 27
    RULE_mul_op = 28

    ruleNames =  [ "program", "statement_list", "statement", "listener_definition", 
                   "trigger_call", "send_command_stmt", "assignment_or_call", 
                   "assignment_or_call_tail", "function_definition", "parameter_list", 
                   "parameter_list_tail", "if_statement", "for_loop", "block", 
                   "condition", "relop", "expression", "expression_tail", 
                   "term", "term_tail", "factor", "factor_call_tail", "list_literal", 
                   "list_items", "list_items_tail", "argument_list", "argument_list_tail", 
                   "add_op", "mul_op" ]

    EOF = Token.EOF
    ON=1
    WHEN=2
    SEND_COMMAND=3
    FUNC=4
    FOR=5
    IN=6
    IF=7
    END=8
    ARROW=9
    ASSIGN=10
    COLON=11
    COMMA=12
    LPAREN=13
    RPAREN=14
    LBRACK=15
    RBRACK=16
    PLUS=17
    MINUS=18
    STAR=19
    DIV=20
    MOD=21
    GT=22
    LT=23
    EQ=24
    NEQ=25
    GTE=26
    LTE=27
    IDENTIFIER=28
    INTEGER=29
    STRING=30
    WS=31
    COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramRuleContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement_list(self):
            return self.getTypedRuleContext(IoTinyParser.Statement_listContext,0)

        def EOF(self):
            return self.getToken(IoTinyParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramRule" ):
                listener.enterProgramRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramRule" ):
                listener.exitProgramRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramRule" ):
                return visitor.visitProgramRule(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = IoTinyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            localctx = IoTinyParser.ProgramRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.statement_list()
            self.state = 59
            self.match(IoTinyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_statement_list

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatementListNonEmptyContext(Statement_listContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Statement_listContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(IoTinyParser.StatementContext,0)

        def statement_list(self):
            return self.getTypedRuleContext(IoTinyParser.Statement_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementListNonEmpty" ):
                listener.enterStatementListNonEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementListNonEmpty" ):
                listener.exitStatementListNonEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementListNonEmpty" ):
                return visitor.visitStatementListNonEmpty(self)
            else:
                return visitor.visitChildren(self)


    class StatementListEmptyContext(Statement_listContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Statement_listContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementListEmpty" ):
                listener.enterStatementListEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementListEmpty" ):
                listener.exitStatementListEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementListEmpty" ):
                return visitor.visitStatementListEmpty(self)
            else:
                return visitor.visitChildren(self)



    def statement_list(self):

        localctx = IoTinyParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement_list)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 7, 28, 30]:
                localctx = IoTinyParser.StatementListNonEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.statement()
                self.state = 62
                self.statement_list()
                pass
            elif token in [-1, 8]:
                localctx = IoTinyParser.StatementListEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatementIfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_statement(self):
            return self.getTypedRuleContext(IoTinyParser.If_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementIf" ):
                listener.enterStatementIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementIf" ):
                listener.exitStatementIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementIf" ):
                return visitor.visitStatementIf(self)
            else:
                return visitor.visitChildren(self)


    class StatementForContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def for_loop(self):
            return self.getTypedRuleContext(IoTinyParser.For_loopContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementFor" ):
                listener.enterStatementFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementFor" ):
                listener.exitStatementFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementFor" ):
                return visitor.visitStatementFor(self)
            else:
                return visitor.visitChildren(self)


    class StatementTriggerContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def trigger_call(self):
            return self.getTypedRuleContext(IoTinyParser.Trigger_callContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementTrigger" ):
                listener.enterStatementTrigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementTrigger" ):
                listener.exitStatementTrigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementTrigger" ):
                return visitor.visitStatementTrigger(self)
            else:
                return visitor.visitChildren(self)


    class StatementAssignmentOrCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment_or_call(self):
            return self.getTypedRuleContext(IoTinyParser.Assignment_or_callContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementAssignmentOrCall" ):
                listener.enterStatementAssignmentOrCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementAssignmentOrCall" ):
                listener.exitStatementAssignmentOrCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementAssignmentOrCall" ):
                return visitor.visitStatementAssignmentOrCall(self)
            else:
                return visitor.visitChildren(self)


    class StatementListenerContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def listener_definition(self):
            return self.getTypedRuleContext(IoTinyParser.Listener_definitionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementListener" ):
                listener.enterStatementListener(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementListener" ):
                listener.exitStatementListener(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementListener" ):
                return visitor.visitStatementListener(self)
            else:
                return visitor.visitChildren(self)


    class StatementSendCommandContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def send_command_stmt(self):
            return self.getTypedRuleContext(IoTinyParser.Send_command_stmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementSendCommand" ):
                listener.enterStatementSendCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementSendCommand" ):
                listener.exitStatementSendCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementSendCommand" ):
                return visitor.visitStatementSendCommand(self)
            else:
                return visitor.visitChildren(self)


    class StatementFunctionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_definition(self):
            return self.getTypedRuleContext(IoTinyParser.Function_definitionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementFunction" ):
                listener.enterStatementFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementFunction" ):
                listener.exitStatementFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementFunction" ):
                return visitor.visitStatementFunction(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = IoTinyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = IoTinyParser.StatementListenerContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.listener_definition()
                pass
            elif token in [30]:
                localctx = IoTinyParser.StatementTriggerContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.trigger_call()
                pass
            elif token in [3]:
                localctx = IoTinyParser.StatementSendCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.send_command_stmt()
                pass
            elif token in [28]:
                localctx = IoTinyParser.StatementAssignmentOrCallContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.assignment_or_call()
                pass
            elif token in [7]:
                localctx = IoTinyParser.StatementIfContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.if_statement()
                pass
            elif token in [5]:
                localctx = IoTinyParser.StatementForContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.for_loop()
                pass
            elif token in [4]:
                localctx = IoTinyParser.StatementFunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.function_definition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Listener_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_listener_definition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListenerDefinitionRuleContext(Listener_definitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Listener_definitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ON(self):
            return self.getToken(IoTinyParser.ON, 0)
        def STRING(self):
            return self.getToken(IoTinyParser.STRING, 0)
        def WHEN(self):
            return self.getToken(IoTinyParser.WHEN, 0)
        def condition(self):
            return self.getTypedRuleContext(IoTinyParser.ConditionContext,0)

        def COLON(self):
            return self.getToken(IoTinyParser.COLON, 0)
        def block(self):
            return self.getTypedRuleContext(IoTinyParser.BlockContext,0)

        def END(self):
            return self.getToken(IoTinyParser.END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListenerDefinitionRule" ):
                listener.enterListenerDefinitionRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListenerDefinitionRule" ):
                listener.exitListenerDefinitionRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListenerDefinitionRule" ):
                return visitor.visitListenerDefinitionRule(self)
            else:
                return visitor.visitChildren(self)



    def listener_definition(self):

        localctx = IoTinyParser.Listener_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listener_definition)
        try:
            localctx = IoTinyParser.ListenerDefinitionRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(IoTinyParser.ON)
            self.state = 77
            self.match(IoTinyParser.STRING)
            self.state = 78
            self.match(IoTinyParser.WHEN)
            self.state = 79
            self.condition()
            self.state = 80
            self.match(IoTinyParser.COLON)
            self.state = 81
            self.block()
            self.state = 82
            self.match(IoTinyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Trigger_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_trigger_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TriggerCallRuleContext(Trigger_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Trigger_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(IoTinyParser.STRING, 0)
        def ARROW(self):
            return self.getToken(IoTinyParser.ARROW, 0)
        def expression(self):
            return self.getTypedRuleContext(IoTinyParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggerCallRule" ):
                listener.enterTriggerCallRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggerCallRule" ):
                listener.exitTriggerCallRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriggerCallRule" ):
                return visitor.visitTriggerCallRule(self)
            else:
                return visitor.visitChildren(self)



    def trigger_call(self):

        localctx = IoTinyParser.Trigger_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_trigger_call)
        try:
            localctx = IoTinyParser.TriggerCallRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(IoTinyParser.STRING)
            self.state = 85
            self.match(IoTinyParser.ARROW)
            self.state = 86
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Send_command_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_send_command_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SendCommandRuleContext(Send_command_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Send_command_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEND_COMMAND(self):
            return self.getToken(IoTinyParser.SEND_COMMAND, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IoTinyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IoTinyParser.ExpressionContext,i)

        def COMMA(self):
            return self.getToken(IoTinyParser.COMMA, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSendCommandRule" ):
                listener.enterSendCommandRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSendCommandRule" ):
                listener.exitSendCommandRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSendCommandRule" ):
                return visitor.visitSendCommandRule(self)
            else:
                return visitor.visitChildren(self)



    def send_command_stmt(self):

        localctx = IoTinyParser.Send_command_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_send_command_stmt)
        try:
            localctx = IoTinyParser.SendCommandRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(IoTinyParser.SEND_COMMAND)
            self.state = 89
            self.expression()
            self.state = 90
            self.match(IoTinyParser.COMMA)
            self.state = 91
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_or_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_assignment_or_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentOrCallRuleContext(Assignment_or_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Assignment_or_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(IoTinyParser.IDENTIFIER, 0)
        def assignment_or_call_tail(self):
            return self.getTypedRuleContext(IoTinyParser.Assignment_or_call_tailContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentOrCallRule" ):
                listener.enterAssignmentOrCallRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentOrCallRule" ):
                listener.exitAssignmentOrCallRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentOrCallRule" ):
                return visitor.visitAssignmentOrCallRule(self)
            else:
                return visitor.visitChildren(self)



    def assignment_or_call(self):

        localctx = IoTinyParser.Assignment_or_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment_or_call)
        try:
            localctx = IoTinyParser.AssignmentOrCallRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(IoTinyParser.IDENTIFIER)
            self.state = 94
            self.assignment_or_call_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_or_call_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_assignment_or_call_tail

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentTailAssignContext(Assignment_or_call_tailContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Assignment_or_call_tailContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSIGN(self):
            return self.getToken(IoTinyParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(IoTinyParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentTailAssign" ):
                listener.enterAssignmentTailAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentTailAssign" ):
                listener.exitAssignmentTailAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentTailAssign" ):
                return visitor.visitAssignmentTailAssign(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentTailCallContext(Assignment_or_call_tailContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Assignment_or_call_tailContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(IoTinyParser.LPAREN, 0)
        def argument_list(self):
            return self.getTypedRuleContext(IoTinyParser.Argument_listContext,0)

        def RPAREN(self):
            return self.getToken(IoTinyParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentTailCall" ):
                listener.enterAssignmentTailCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentTailCall" ):
                listener.exitAssignmentTailCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentTailCall" ):
                return visitor.visitAssignmentTailCall(self)
            else:
                return visitor.visitChildren(self)



    def assignment_or_call_tail(self):

        localctx = IoTinyParser.Assignment_or_call_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment_or_call_tail)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = IoTinyParser.AssignmentTailAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(IoTinyParser.ASSIGN)
                self.state = 97
                self.expression()
                pass
            elif token in [13]:
                localctx = IoTinyParser.AssignmentTailCallContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(IoTinyParser.LPAREN)
                self.state = 99
                self.argument_list()
                self.state = 100
                self.match(IoTinyParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IoTinyParser.RULE_function_definition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionDefinitionRuleContext(Function_definitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IoTinyParser.Function_definitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(IoTinyParser.FUNC, 0)
        def IDENTIFIER(self):
            return self.getToken(IoTinyParser.IDENTIFIER, 0)
        def LPAREN(self):
            return self.getToken(IoTinyParser.LPAREN, 0)
        def parameter_list(self):
            return self.getTypedRuleContext(IoTinyParser.Parameter_listContext,0)
